# rwrd

./: README.md  SOLANA_PROGRAMS_MVP.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.tsx  Earn.tsx  MerchantBorrow.tsx  MerchantHome.tsx  MerchantPOS.tsx  MerchantPortfolio.tsx  Pay.tsx  Portfolio.tsx  ProductManagement.tsx  WalletProvider.tsx
frontend/src/hooks/: useCreateProduct.ts  useCreateSubscriptionProgram.ts  useCustomerSubscriptions.ts  useDeleteProduct.ts  useDeleteSubscriptionProgram.ts  useProduct.ts  useProducts.ts  useSubscriptionPrograms.ts  useUpdateProduct.ts  useUpdateSubscriptionProgram.ts
frontend/src/idl/: liquidity_pool.json  merchant_registry.json  subscription_factory.json  subscription_manager.json
frontend/src/services/: customerService.ts  merchantService.ts  productService.ts  subscriptionFactoryService.ts  subscriptionProgramService.ts  subscriptionService.ts  trustScoreService.ts
frontend/src/types/: borrowing.ts  customer.ts  merchant.ts  product.ts  purchase.ts  qrcode-react.d.ts  redemption.ts  rwrdTypes.backup  subscription.ts  subscriptionProgram.ts
frontend/src/utils/: supabase.ts
rwrd-programs/: Anchor.toml  README.md  package.json
rwrd-programs/migrations/: deploy.ts
rwrd-programs/programs/liquidity-pool/: Cargo.toml
rwrd-programs/programs/liquidity-pool/src/: lib.rs
rwrd-programs/programs/subscription-manager/: Cargo.toml
rwrd-programs/programs/subscription-manager/src/: lib.rs
rwrd-programs/tests/: helpers.ts  workflow.test.ts
(+10 files in other folders)
